Removed type-parameter from Parameters again. It is nearly always Object, it give more cumber than it's worth
git-svn-id: https://scm.mmbase.org/mmbase/trunk@20547 91430c5f-d668-0410-9e7d-dd663366dcfd